# Snaze_game

./: README.md  author.md
lib/: text.color.h
source/: 0_main.cpp  1.1_snakegame.h  1.2_snakegame.cpp  1.3_snkgm_msgs.cpp  2.0_level.h  2.1_level.cpp  CMakeLists.txt  main.cpp  messages.cpp  messages.h  sim_messsages.cpp  simulation.cpp  simulation.h  snakegame.cpp  snakegame.h  snkgm_msgs.cpp  teste
